# Simple_minesweeper

./: .gitignore  Assignment List.txt  CMakeLists.txt  config_window.cpp  config_window.h  main.cpp  mingw instructions.txt  readme.md  util_aspectratio.cpp  util_aspectratio.h  util_modifystringdata.cpp  util_modifystringdata.h  util_renderimage.cpp  util_renderimage.h  util_settings.cpp  util_settings.h
